Migration to jdk 23